+ add schema. + add explications blabla

--- a/2018-RevueDeLitterature/macros.tex
+++ b/2018-RevueDeLitterature/macros.tex
@@ -61,8 +61,8 @@
 %\newcommand{\ret}{$\uparrow$\xspace}
 
 \newcommand{\myparagraph}[1]{\noindent\textbf{#1.}}
-\newcommand{\eg}{\emph{e.g.,}\xspace}
-\newcommand{\ie}{\emph{i.e.,}\xspace}
+\newcommand{\eg}{\emph{e.g.}\xspace}
+\newcommand{\ie}{\emph{i.e.}\xspace}
 \newcommand{\etal}{\emph{et al.,}\xspace}
 \newcommand{\ct}[1]{{\textsf{#1}}\xspace}
 \newcommand{\etc}[1]{\textit{etc.}}
