--- a/2018-RevueDeLitterature/macros.tex
+++ b/2018-RevueDeLitterature/macros.tex
@@ -45,7 +45,7 @@
 \newcommand{\tabref}[1]{Table~\ref{tab:#1}}
 \newcommand{\layout}[1]{#1}
 \newcommand{\commented}[1]{}
-\newcommand{\secref}[1]{Section \ref{sec:#1}}
+\newcommand{\secref}[1]{Section~\ref{sec:#1}}
 \newcommand{\seclabel}[1]{\label{sec:#1}}
 
 %\newcommand{\ct}[1]{\textsf{#1}}
