--- a/2018-RevueDeLitterature/main.tex
+++ b/2018-RevueDeLitterature/main.tex
@@ -531,7 +531,9 @@ It exists three kind of layout, the FlowLayout, the StackLayout, the GridLayout 
 The last idea of associating a layout to a ui element is similar to the notion of layout we linked to a widget.
 
 
-\citet{samir2007swing2script}.
+\citet{samir2007swing2script} did not describe the layout model they designed.
+But they precise they use the XUL format as they did for the GUI description \secref{gui}.
+
 
 \subsection{KDM}
 \label{sec:kdm}
