Ajout d'idee de partie

--- a/2018-RevueDeLitterature/main.tex
+++ b/2018-RevueDeLitterature/main.tex
@@ -586,6 +586,17 @@ But they precise they use the XUL format as they did for the GUI description \se
 \subsection{KDM}
 \label{sec:kdm}
 
+\section{Reverse engineering techniques}
+\label{sec:reverseEngineering}
+
+\subsection{Static}
+\label{sec:reverseStatic}
+
+\subsection{Dynamic}
+\label{sec:reverseDynamic}
+
+\subsection{Mix}
+\label{sec:reverseMix}
 
 \section{Discussion}
 \label{sec:discussion}
