--- a/2018-RevueDeLitterature/references.bib
+++ b/2018-RevueDeLitterature/references.bib
@@ -283,3 +283,10 @@
   year={2012},
   publisher={ACM}
 }
+
+@article{brambilla2014interaction,
+  title={The interaction flow modeling language (ifml)},
+  author={Brambilla, Marco and Fraternali, Piero and others},
+  year={2014},
+  publisher={version 1.0. Technical report, Object Management Group (OMG), http://www. ifml. org}
+}
