--- a/2018-RevueDeLitterature/macros.tex
+++ b/2018-RevueDeLitterature/macros.tex
@@ -82,14 +82,37 @@
    \end{figure}
 }
 
+
 \newcommand{\twocolumnpic}[3]{
-   \begin{figure*}[!ht]
-   \begin{center}
-   \includegraphics[scale=\defaultScale]{#1}
-   \caption{#2}
-   \label{#3}
-   \end{center}
-   \end{figure*}}
+  \begin{figure*}[!ht]
+  \begin{center}
+  \includegraphics[scale=\defaultScale]{#1}
+  \caption{#2}
+  \label{#3}
+  \end{center}
+  \end{figure*}
+}
+
+\newcommand{\picw}[3]{
+  \begin{figure}[h]
+  \begin{center}
+  \includegraphics[width=\columnwidth]{#1}
+  \caption{#2}
+  \label{#3}
+  \end{center}
+  \end{figure}
+}
+
+\newcommand{\twocolumnpicw}[3]{
+  \begin{figure*}[!ht]
+  \begin{center}
+  \includegraphics[scale=\columnwidth]{#1}
+  \caption{#2}
+  \label{#3}
+  \end{center}
+  \end{figure*}
+}
+
 
 \newcommand{\infe}{$<$}
 \newcommand{\supe}{$\rightarrow$\xspace}
